# pysignalcatbot

./: .gitignore  .gitmodules  LICENSE  README.md
docker/: start_rest_api.sh
pysignalcatbot/: pyproject.toml
pysignalcatbot/pysignalcatbot/: bot.py  cli.py  commands.py  main.py
