[tool.poetry]
name = "pysignalcatbot"
version = "0.1.0"
description = ""
authors = ["Felix Warmuth <ygit@felixwarmuth.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
loguru = "^0.7.2"
signalbot = "0.8.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
